* 08 July 2016 - Updated code to make it cross platform (Thanks to sketchymoose and inigma117)
* 08 July 2016 - Added minor fixes