@@ -42,3 +42,5 @@ class Config(object):
     intelligence_type['ip'] = 'ip_information'
 
     deep_viz_api = 'YOUR_KEY_HERE'
+    threat_crowd_limit = True
+    threat_crowd_limit_seconds = 10
