@@ -37,6 +37,7 @@ body {
 .legend { list-style: none; }
 .legend li { float: left; }
 .legend span { border: 1px solid #ccc; float: left; width: 12px; height: 12px; margin: 2px; }
+.legend .threatcrowd { background-color: #ffe033; }
 .legend .safebrowsing { background-color: #a00000; }
 .legend .spyonweb { background-color: #999966; }
 .legend .websiteinformer { background-color: #00ff00; }
@@ -58,7 +59,7 @@ ul {
 <header class="header-basic-light">
 
 	<div class="header-limiter">
-
+		<img src="resource\OSTrICaLogo.png" style="float:left;height:80px;margin-top:-18px">
 		<h1><a href="#">OSTrICa<span> - Open Source Threat Intelligence Collector</span></a></h1>
 		<br/>
 		<span style="float:left;font-size:8px;position: relative;top:5px;margin-left:10px;"> developed by Roberto Sponchioni - @Ptr32Void</span>
