@@ -100,6 +100,8 @@ ready: function() {
 						$("#info").html("Selected intelligence<br/> belongs to: <b>SpyOnWeb</b>");
 					} else if (node.data('color') == '#a00000') {
 						$("#info").html("Selected intelligence<br/> belongs to: <b>SafeBrowsing</b>");
+					} else if (node.data('color') == '#ffe033') {
+						$("#info").html("Selected intelligence<br/> belongs to: <b>ThreatCrowd</b>");
 					} else {
 						$("#info").html("Not implemented yet.");
 					}
@@ -179,6 +181,7 @@ ready: function() {
 			var websiteinformer_intelligence = $('#websiteinformer_intel').is(':checked');
 			var spyonweb_intelligence = $('#sow_intel').is(':checked');
 			var safebrowsing_intelligence = $('#sbg_intel').is(':checked');
+			var threatcrowd_intelligence = $('#tc_intel').is(':checked');
 			
 			var domains_intelligence = $('#flt_domains').is(':checked');
 			var associated_domains_intelligence = $('#flt_assoc_domains').is(':checked');
@@ -236,6 +239,10 @@ ready: function() {
 				} else if( type === '#a00000' ){
 				  
 				  if( !safebrowsing_intelligence ){ filter(); }
+				  
+				} else if( type === '#ffe033' ){
+				  
+				  if( !threatcrowd_intelligence ){ filter(); }
 				  
 				}
 				
@@ -346,9 +353,12 @@ ready: function() {
 					node_type = 'WebSiteInformer';
 				} else if (node.data('color') == '#ff0000') {
 					node_type = 'Cymru';
+				} else if (node.data('color') == '#ffe033') {
+					node_type = 'ThreatCrowd';
 				} else {
 					node_type = 'Not implemented yet.';
 				}	
+				
 				
 				$('#info').html( 'Node type is <b>'+ node_type +'</b><br/>Name: <b>' + node.data('name') + '</b><br/>Information: <b>' + node.data('label') + '</b>' ).show();
 			}
@@ -429,6 +439,7 @@ function hideNode(idx, node_id){
 	<li><span class="websiteinformer"></span> WebSiteInformer</li>
 	<li><span class="spyonweb"></span> SpyOnWeb</li>
 	<li><span class="safebrowsing"></span> SafeBrowsing (Google)</li>
+	<li><span class="threatcrowd"></span> ThreatCrowd</li>
 </ul>
 	</td>
 	<td>
@@ -459,6 +470,7 @@ function hideNode(idx, node_id){
 		<li><input id="websiteinformer_intel" type="checkbox" checked></input> WebSiteInformer</li>
 		<li><input id="sow_intel" type="checkbox" checked></input> SpyOnWeb</li>
 		<li><input id="sbg_intel" type="checkbox" checked></input> SafeBrowsing (Google)</li>
+		<li><input id="tc_intel" type="checkbox" checked></input> ThreatCrowd</li>		
 		</ul>
 
 	<br/>
